

Slick 7.x-1.0-dev, 2014-06-16
-----------------------------
Renamed and reorganized all CSS files to match Drupal 8 file organization, see
  https://drupal.org/node/1887922

Slick 7.x-1.0-dev, 2014-06-13
-----------------------------
Added slick-views.tpl.php to satisfy Views UI template discovery.

Slick 7.x-1.0-dev, 2014-06-11
-----------------------------
Added thumbnail pager option.
Changed _slick_fields_get_media_thumbnail() to be reusable for thumbnail pagers.
Fixed Youtube URL not playing inside Colorbox due to missing external params.
Fixed checkboxes states with checked attributes at admin pages.
Added autoplay to Colorbox audio/video.

Slick 7.x-1.0-dev, 2014-06-09
-----------------------------
Added API file containing skin information.
Added more Views options to have consistent markups with the Field version.

Slick 7.x-1.0-dev, 2014-06-08
-----------------------------
Added optional Colorbox intergration to display image or video inside Colorbox,
  or as an image to iframe switcher.

Slick 7.x-1.0-dev, 2014-06-07
-----------------------------

Added Sass versions for slick.skin.css and slick.media.css.
Added basic skins to support various slide layouts.
Added direct layout options for core Image field. Media and Field collection
  should use a separate field instead with some pre-defined options.
Added slick.make file to download relevant libraries. We don't name it.example
  to allow simplytest.me download the library.
Added title, captions and overlay fields for Field Collection and Media
Added options to break down Media and Field collection fields to support custom
  displays for slide title, description, overlay audio/video/image, link, and
  layout fields.
Added supports for Field collection at slick_fields.module.
Added Picture module integration.

Slick 7.x-1.0-dev, 2014-05-25
-----------------------------
Added admin CSS and JS to make nice CTools UI.
Added responsive display options, and additional custom options.