@@ -4,11 +4,11 @@
  */
 .has-tooltip .form-item {
   position: relative;
-  
+
   > .description {
     background: $dark;
     background: rgba(0,0,0,0.8);
-    border-radius: 2px;  
+    border-radius: 2px;
     bottom: 120%;
     @include box-shadow(0 2px 10px -2px $dark);
     color: $light-grey !important;
@@ -28,7 +28,7 @@
     @include transition(compact(all .4s ease-in 0s));
     text-align: left;
     white-space: normal;
-    z-index: 99;    
+    z-index: 99;
 
     a {
       color: $white;
@@ -52,7 +52,7 @@
       z-index: 99;
     }
   }
-  
+
   &.form-type-checkboxes > .description,
   &.form-type-textarea > .description {
     margin-left: -30% !important;
@@ -60,11 +60,11 @@
     min-width: 60% !important;
     width: 60% !important;
   }
-  
+
   &.form-type-checkboxes > .description {
 
-  }  
-  
+  }
+
   // JS hover dependent.
   &.selected,
   &.hover {
@@ -75,9 +75,31 @@
       visibility: visible;
       overflow: visible !important;
     }
+
     .hint {
       display: block;
-    }    
+    }
+
+  }
+
+  &.selected {
+    > .description {
+      padding-left: 20px !important;
+      &:before {
+        color: $light-grey;
+        content: "x";
+        display: block;
+        font-family: sans-serif;
+        height: 20px;
+        left: 5px;
+        line-height: 18px;
+        margin-top: -10px;
+        position: absolute;
+        top: 50%;
+        width: 20px;
+        z-index: 0;
+      }
+    }
   }
 }
 
@@ -93,7 +115,7 @@
 
 .form-item {
   .hint {
-      background: $mid-grey;    
+      background: $mid-grey;
       border-radius: 50%;
       color: $white;
       content: '?';
@@ -115,7 +137,7 @@
         top: 16px;
         right: -5px;
       }
-  } 
+  }
   &:hover .hint {
     display: block;
   }
