@@ -2,6 +2,8 @@
 
 Slick 7.x-1.0-dev, 2014-06-16
 -----------------------------
+Fixed broken arrows due to problematic default anonymous DIV by forcing specific
+  class .slick__slide to slide option.
 Renamed and reorganized all CSS files to match Drupal 8 file organization, see
   https://drupal.org/node/1887922
 
